--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+
+/*  Google poppins font */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;0,800;1,600&display=swap');
 /*  Root Variables */
 :root {
     /*  colors */
@@ -9,6 +12,7 @@
     --color-dark:#363949;
     --color-light:rgba(132,139,200, 018);
     --color-primary-variant: #111e88;
+    --color-dark-variant: #677483;
     --color-background: #f6f6f9;
 
     --color-info-dark: #7d8da1;
@@ -35,4 +39,96 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+}
+html {
+    font-size: 14px;
+}
+
+body {
+    width: 100vw;
+    height: 100vw;
+    font-family: poppins, sans-serif;
+    font-size: 0.88rem;
+    background: var(--color-background);
+    user-select: none;
+    overflow-x: hidden;
+}
+
+.container {
+    display: grid;
+    width: 96%;
+    margin: 0 auto;
+    gap: 0.8rem;
+    grid-template-columns: 14rem auto 23rem;
+
+}
+
+aside {
+    height: 100vw;
+    background: gray;
+}
+
+a{
+    color: #111e88;
+}
+img { 
+    display: block; 
+    width: 100%; 
+}
+
+h1 { 
+    font-weight: 800;
+    font-size: 1.8rem; 
+}
+
+h2 {
+    font-size: 1.4rem; 
+}
+
+h3 {
+    font-size: 0.87rem; 
+}
+
+h3 {
+    font-size: 0.8rem;
+}
+
+h3 {
+    font-size: 0.77rem;
+}
+
+small {
+    font-size: 0.75rem;
+}
+
+
+
+.profile-img {
+    width: 2.8rem;
+    height: 2.8rem;
+    border-radius: 50%;
+    overflow: hidden;
+}
+.text-muted {
+    color: var(--color-info-dark)
+}
+
+.primary {
+    color: var(--color-primary)
+}
+
+.warning {
+    color: var(--color-warning)
+}
+
+.danger {
+    color: var(--color-danger)
+}
+
+p {
+    color: var(--color-dark-variant);
+}
+
+b {
+    color: var(--color-dark);
 }
