--- a/style.css
+++ b/style.css
@@ -65,8 +65,51 @@ body {
 
 aside {
     height: 100vw;
-    background: gray;
+    background: white;
 }
+aside .sidebar {
+    background: white;
+    display: flex;
+    flex-direction: column;
+
+    height: 86vh;
+    position: relative;
+    top: 3rem;
+}
+
+aside .top {
+    background: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 1.4rem;
+}
+aside .logo img {
+    width: 3rem;
+    height: 3rem;
+}
+
+aside .close {
+    display: none;
+}
+
+aside h3 {
+    font-weight:500;
+}
+
+aside .sidebar a {
+    display: flex;
+    color: var(--color-info-dark);
+    margin: 2rem;
+    gap: 1rem;
+    align-items: center;
+    position: relative;
+    height: 3.7rem;
+    transition: all 300ms ease;
+
+
+}
+
 
 a{
     color: #111e88;
