--- a/style.css
+++ b/style.css
@@ -106,14 +106,40 @@ aside .sidebar a {
     position: relative;
     height: 3.7rem;
     transition: all 300ms ease;
-
-
 }
 
+aside .sidebar a.selected{
+    background-color: var(--color-light);
+    color: var(--color-white);
+    margin-left: 0;
+}
+
+aside .sidebar a span{
+    transition: all 300ms ease;
+}
+
+aside .sidebar a:hover{
+    color: var(--color-primary);
+}
+
+aside .sidebar a:hover span{
+    margin-left: 1rem;
+}
+
+aside .sidebar a .issue-count {
+    color: var(--color-danger);
+    font-size: 12px;
+}
+
+aside .sidebar a .message-count {
+    color: var(--color-danger);
+    font-size: 12px;
+}
 
 a{
     color: #111e88;
 }
+
 img { 
     display: block; 
     width: 100%; 
