--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body {
     background: var(--color-background);
     user-select: none;
     overflow-x: hidden;
+    color: var(--color-dark);
 }
 
 .container {
@@ -108,34 +109,6 @@ aside .sidebar a {
     transition: all 300ms ease;
 }
 
-aside .sidebar a.selected{
-    background-color: var(--color-light);
-    color: var(--color-white);
-    margin-left: 0;
-}
-
-aside .sidebar a span{
-    transition: all 300ms ease;
-}
-
-aside .sidebar a:hover{
-    color: var(--color-primary);
-}
-
-aside .sidebar a:hover span{
-    margin-left: 1rem;
-}
-
-aside .sidebar a .issue-count {
-    color: var(--color-danger);
-    font-size: 12px;
-}
-
-aside .sidebar a .message-count {
-    color: var(--color-danger);
-    font-size: 12px;
-}
-
 a{
     color: #111e88;
 }
@@ -169,9 +142,6 @@ h3 {
 small {
     font-size: 0.75rem;
 }
-
-
-
 .profile-img {
     width: 2.8rem;
     height: 2.8rem;
@@ -201,3 +171,64 @@ p {
 b {
     color: var(--color-dark);
 }
+
+/* REGION: Left */
+aside .sidebar a.selected{
+    background-color: var(--color-light);
+    color: var(--color-white);
+    margin-left: 0;
+}
+
+aside .sidebar a span{
+    transition: all 300ms ease;
+}
+
+aside .sidebar a:hover{
+    color: var(--color-primary);
+}
+
+aside .sidebar a:hover span{
+    margin-left: 1rem;
+}
+
+aside .sidebar a .issue-count {
+    color: var(--color-danger);
+    font-size: 12px;
+}
+
+aside .sidebar a .message-count {
+    color: var(--color-danger);
+    font-size: 12px;
+}
+
+/* REGION: Middle */
+main {
+    margin-top: 1.4rem;
+}
+main .date input{
+    display: inline-block;
+    background: var(--color-light);
+    border-radius: var(--border-radius-1);
+    margin-top: 1rem;
+    padding: 0.5rem 0.6rem;
+}
+
+main .Insight {
+display: grid;
+grid-template-columns: repeat(3, 1fr);
+gap: 1.6rem;
+}
+
+main .Insight > div {
+    background: var(--color-white);
+    padding: var(--card-padding);
+    border-radius: var(--card-border-radius);
+    margin-top: 1rem;
+    box-shadow: var(--box-shadow);
+    transition: all 300ms ease;
+}
+
+main .Insight > div:hover {
+    box-shadow: var(--box-shadow);
+}
+
