--- a/style.css
+++ b/style.css
@@ -207,7 +207,8 @@ main {
 }
 main .date input{
     display: inline-block;
-    background: var(--color-light);
+    background: var(--color-dark);
+    color:var(--color-white);
     border-radius: var(--border-radius-1);
     margin-top: 1rem;
     padding: 0.5rem 0.6rem;
@@ -225,10 +226,14 @@ main .Insight > div {
     border-radius: var(--card-border-radius);
     margin-top: 1rem;
     box-shadow: var(--box-shadow);
+    box-shadow: #ff7782;
     transition: all 300ms ease;
 }
 
 main .Insight > div:hover {
     box-shadow: var(--box-shadow);
+}
+
+main .number {
 }
 
